[gd_scene load_steps=2 format=3 uid="uid://bmg5r3kswwxnz"]

[ext_resource type="Script" uid="uid://bmg5r3kswwxny" path="res://addons/godot_itch/godot_itch_showcase.gd" id="1_showcase_script"]

[node name="GodotItchShowcase" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_showcase_script")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="VBox"]
layout_mode = 2
theme_type_variation = &"HeaderLarge"
text = "GodotItch Plugin - Simple Demo"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBox"]
layout_mode = 2

[node name="ApiKeyLabel" type="Label" parent="VBox"]
layout_mode = 2
text = "API Key:"

[node name="ApiKeyInput" type="LineEdit" parent="VBox"]
layout_mode = 2
placeholder_text = "Enter your itch.io API key"
secret = true

[node name="GameIdLabel" type="Label" parent="VBox"]
layout_mode = 2
text = "Game ID:"

[node name="GameIdInput" type="LineEdit" parent="VBox"]
layout_mode = 2
placeholder_text = "Enter your game ID (number)"

[node name="DownloadKeyLabel" type="Label" parent="VBox"]
layout_mode = 2
text = "Download Key:"

[node name="DownloadKeyInput" type="LineEdit" parent="VBox"]
layout_mode = 2
placeholder_text = "Enter download key to verify"

[node name="VerifyButton" type="Button" parent="VBox"]
layout_mode = 2
text = "Verify Download Key"

[node name="HSeparator2" type="HSeparator" parent="VBox"]
layout_mode = 2

[node name="ResultLabel" type="Label" parent="VBox"]
layout_mode = 2
text = "Enter your credentials and a download key, then click Verify"
horizontal_alignment = 1
autowrap_mode = 3
